--- a/sql_conn_demo.ipynb
+++ b/sql_conn_demo.ipynb
@@ -6,8 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sql_conn import *\n",
-    "import pandas as pd\n"
+    "from sql_conn import *"
    ]
   },
   {
@@ -35,8 +34,8 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "  CURRENT_TIME CURRENT_DATE    CURRENT_TIMESTAMP\n0     21:23:49   2020-09-27  2020-09-27 21:23:49",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>CURRENT_TIME</th>\n      <th>CURRENT_DATE</th>\n      <th>CURRENT_TIMESTAMP</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>21:23:49</td>\n      <td>2020-09-27</td>\n      <td>2020-09-27 21:23:49</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "  CURRENT_TIME CURRENT_DATE    CURRENT_TIMESTAMP\n0     21:31:57   2020-09-27  2020-09-27 21:31:57",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>CURRENT_TIME</th>\n      <th>CURRENT_DATE</th>\n      <th>CURRENT_TIMESTAMP</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>21:31:57</td>\n      <td>2020-09-27</td>\n      <td>2020-09-27 21:31:57</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
      "execution_count": 3
@@ -71,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,11 +91,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "sc.upload(df, \"tabx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "    rule attribute\n0  rule5    attri5\n1  rule2    attri1\n2  rule1    attri1\n3  rule1    attri2\n4  rule2    attri2\n5  rule1    attri1\n6  rule3    attri3\n7  rule2    attri1\n8  rule1    attri1",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>rule</th>\n      <th>attribute</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>rule5</td>\n      <td>attri5</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>rule2</td>\n      <td>attri1</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>rule1</td>\n      <td>attri1</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>rule1</td>\n      <td>attri2</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>rule2</td>\n      <td>attri2</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>rule1</td>\n      <td>attri1</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>rule3</td>\n      <td>attri3</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>rule2</td>\n      <td>attri1</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>rule1</td>\n      <td>attri1</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
+   "source": [
+    "sc.query(\"select * from tabx\")"
    ]
   },
   {
@@ -107,30 +125,11 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "    rule attribute\n0  rule5    attri5\n1  rule2    attri1\n2  rule1    attri1\n3  rule1    attri2\n4  rule2    attri2\n5  rule1    attri1\n6  rule3    attri3\n7  rule2    attri1\n8  rule1    attri1",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>rule</th>\n      <th>attribute</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>rule5</td>\n      <td>attri5</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>rule2</td>\n      <td>attri1</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>rule1</td>\n      <td>attri1</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>rule1</td>\n      <td>attri2</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>rule2</td>\n      <td>attri2</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>rule1</td>\n      <td>attri1</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>rule3</td>\n      <td>attri3</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>rule2</td>\n      <td>attri1</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>rule1</td>\n      <td>attri1</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 8
-    }
-   ],
-   "source": [
-    "sc.query(\"select * from tabx\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
       "text/plain": "    rule attribute  rule_count\n0  rule1    attri1           1\n1  rule1    attri1           2\n2  rule1    attri1           3\n3  rule1    attri2           4\n4  rule2    attri1           1\n5  rule2    attri1           2\n6  rule2    attri2           3\n7  rule3    attri3           1\n8  rule5    attri5           1",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>rule</th>\n      <th>attribute</th>\n      <th>rule_count</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>rule1</td>\n      <td>attri1</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>rule1</td>\n      <td>attri1</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>rule1</td>\n      <td>attri1</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>rule1</td>\n      <td>attri2</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>rule2</td>\n      <td>attri1</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>rule2</td>\n      <td>attri1</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>rule2</td>\n      <td>attri2</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>rule3</td>\n      <td>attri3</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>rule5</td>\n      <td>attri5</td>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 8
     }
    ],
    "source": [
@@ -148,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +157,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>rule</th>\n      <th>attribute</th>\n      <th>rule_count</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>rule1</td>\n      <td>attri1</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>rule2</td>\n      <td>attri1</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>rule3</td>\n      <td>attri3</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>rule5</td>\n      <td>attri5</td>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 10
+     "execution_count": 9
     }
    ],
    "source": [
@@ -181,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "tags": []
    },
