--- a/sql_conn_demo.ipynb
+++ b/sql_conn_demo.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sql_conn import *\n"
+    "from sql_conn import *"
    ]
   },
   {
@@ -28,17 +28,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "  CURRENT_TIME CURRENT_DATE    CURRENT_TIMESTAMP\n0     22:33:42   2020-09-29  2020-09-29 22:33:42",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>CURRENT_TIME</th>\n      <th>CURRENT_DATE</th>\n      <th>CURRENT_TIMESTAMP</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>22:33:42</td>\n      <td>2020-09-29</td>\n      <td>2020-09-29 22:33:42</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "  CURRENT_TIME CURRENT_DATE    CURRENT_TIMESTAMP\n0     04:08:02   2020-10-01  2020-10-01 04:08:02",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>CURRENT_TIME</th>\n      <th>CURRENT_DATE</th>\n      <th>CURRENT_TIMESTAMP</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>04:08:02</td>\n      <td>2020-10-01</td>\n      <td>2020-10-01 04:08:02</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 31
+     "execution_count": 3
     }
    ],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>date('2018-12-01')</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2018-12-01</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 4
     }
    ],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -81,34 +81,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Upload succsessful\n"
+    }
+   ],
    "source": [
     "sc.upload(df,\"property_sale\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "       PROPERTYCITY     cnt\n0        PITTSBURGH  160922\n1        CORAOPOLIS   10359\n2       MC KEESPORT    9104\n3          GIBSONIA    6698\n4         SEWICKLEY    6282\n..              ...     ...\n94         MOON TWP       1\n95  N VERSAILLES          1\n96        WEST VIEW       1\n97        WHITE OAK       1\n98          WITAKER       1\n\n[99 rows x 2 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>PROPERTYCITY</th>\n      <th>cnt</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>PITTSBURGH</td>\n      <td>160922</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>CORAOPOLIS</td>\n      <td>10359</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>MC KEESPORT</td>\n      <td>9104</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>GIBSONIA</td>\n      <td>6698</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>SEWICKLEY</td>\n      <td>6282</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>94</th>\n      <td>MOON TWP</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>95</th>\n      <td>N VERSAILLES</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>96</th>\n      <td>WEST VIEW</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>97</th>\n      <td>WHITE OAK</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>98</th>\n      <td>WITAKER</td>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n<p>99 rows × 2 columns</p>\n</div>"
+      "text/plain": "    PROPERTYCITY     CNT\n0     PITTSBURGH  160922\n1     CORAOPOLIS   10359\n2    MC KEESPORT    9104\n3       GIBSONIA    6698\n4      SEWICKLEY    6282\n5  MC KEES ROCKS    6131\n6        WEXFORD    6056\n7    BETHEL PARK    5849\n8    MONROEVILLE    5428\n9       CARNEGIE    5209",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>PROPERTYCITY</th>\n      <th>CNT</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>PITTSBURGH</td>\n      <td>160922</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>CORAOPOLIS</td>\n      <td>10359</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>MC KEESPORT</td>\n      <td>9104</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>GIBSONIA</td>\n      <td>6698</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>SEWICKLEY</td>\n      <td>6282</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>MC KEES ROCKS</td>\n      <td>6131</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>WEXFORD</td>\n      <td>6056</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>BETHEL PARK</td>\n      <td>5849</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>MONROEVILLE</td>\n      <td>5428</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>CARNEGIE</td>\n      <td>5209</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 38
+     "execution_count": 7
     }
    ],
    "source": [
     "sc.query(\"\"\"\n",
-    "          select * from \n",
-    "          (select PROPERTYCITY, count(*) as cnt from property_sale  group by 1 )\n",
-    "          order by cnt desc          \n",
-    "         \"\"\")"
+    "        select * from \n",
+    "        (select PROPERTYCITY, count(*) as CNT from property_sale  group by 1 )\n",
+    "        order by cnt desc          \n",
+    "        limit 10\n",
+    "        \"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sc.query(\" drop table if exists sales_counts\")\n",
+    "sc.query(\"\"\" create table sales_counts as \n",
+    "        select * from \n",
+    "        (select PROPERTYCITY, count(*) as CNT from property_sale  group by 1 )\n",
+    "        order by CNT desc          \n",
+    "        \"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sc.save_table('sales_counts', 'data/sales.csv')"
    ]
   },
   {
