reading from csv method, added

--- a/sql_conn_demo.ipynb
+++ b/sql_conn_demo.ipynb
@@ -10,6 +10,14 @@
    ]
   },
   {
+   "source": [
+    "## Establishing sqlite connection\n",
+    "if no database name is specified the default is 'in memory'"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
@@ -34,8 +42,8 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "  CURRENT_TIME CURRENT_DATE    CURRENT_TIMESTAMP\n0     04:08:02   2020-10-01  2020-10-01 04:08:02",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>CURRENT_TIME</th>\n      <th>CURRENT_DATE</th>\n      <th>CURRENT_TIMESTAMP</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>04:08:02</td>\n      <td>2020-10-01</td>\n      <td>2020-10-01 04:08:02</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "  CURRENT_TIME CURRENT_DATE    CURRENT_TIMESTAMP\n0     20:34:13   2020-10-04  2020-10-04 20:34:13",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>CURRENT_TIME</th>\n      <th>CURRENT_DATE</th>\n      <th>CURRENT_TIMESTAMP</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>20:34:13</td>\n      <td>2020-10-04</td>\n      <td>2020-10-04 20:34:13</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
      "execution_count": 3
@@ -55,7 +63,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "  date('2018-12-01')\n0         2018-12-01",
+      "text/plain": "  date(&#39;2018-12-01&#39;)\n0         2018-12-01",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>date('2018-12-01')</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2018-12-01</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
@@ -80,6 +88,13 @@
    ]
   },
   {
+   "source": [
+    "## Uploading a Panda Dataframe to a table"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
@@ -95,6 +110,13 @@
    "source": [
     "sc.upload(df,\"property_sale\")\n"
    ]
+  },
+  {
+   "source": [
+    "## Running queries"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -122,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,17 +157,79 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "sc.save_table('sales_counts', 'data/sales.csv')"
+    "## Saving to csv"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "to_csv() got an unexpected keyword argument &#39;csv_file_name&#39;",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m&lt;ipython-input-9-f6aefee84f01&gt;\u001b[0m in \u001b[0;36m&lt;module&gt;\u001b[1;34m\u001b[0m\n\u001b[1;32m----&gt; 1\u001b[1;33m \u001b[0msc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[1;33m(\u001b[0m \u001b[0mtable_name\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m&#39;sales_counts&#39;\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcsv_file_name\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m&#39;data/sales.csv&#39;\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: to_csv() got an unexpected keyword argument &#39;csv_file_name&#39;"
+     ]
+    }
+   ],
+   "source": [
+    "sc.to_csv( table_name='sales_counts', csv_file_name='data/sales.csv')"
+   ]
+  },
+  {
+   "source": [
+    "## Reading from a csv and storing in a table"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Upload succsessful\n"
+    }
+   ],
+   "source": [
+    "sc.upload_csv(file_name='data/sales.csv', table_name='sales')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "  PROPERTYCITY     CNT\n0   PITTSBURGH  160922\n1   CORAOPOLIS   10359\n2  MC KEESPORT    9104\n3     GIBSONIA    6698\n4    SEWICKLEY    6282",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>PROPERTYCITY</th>\n      <th>CNT</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>PITTSBURGH</td>\n      <td>160922</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>CORAOPOLIS</td>\n      <td>10359</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>MC KEESPORT</td>\n      <td>9104</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>GIBSONIA</td>\n      <td>6698</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>SEWICKLEY</td>\n      <td>6282</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 19
+    }
+   ],
+   "source": [
+    "sc.query(\"select * from sales limit 5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {
     "tags": []
    },
